@@ -787,7 +787,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 
 		$result = '';
 
-		/** @var tx_seminars_speaker $speaker */
+		/** @var Tx_Seminars_OldModel_Speaker $speaker */
 		foreach ($this->getSpeakerBag($speakerRelation) as $speaker) {
 			$name = $speaker->getLinkedTitle($plugin);
 			if ($speaker->hasOrganization()) {
@@ -833,7 +833,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 
 		$result = '';
 
-		/** @var tx_seminars_speaker $speaker */
+		/** @var Tx_Seminars_OldModel_Speaker $speaker */
 		foreach ($this->getSpeakerBag($speakerRelation) as $speaker) {
 			$result .= $speaker->getTitle();
 			if ($speaker->hasOrganization()) {
@@ -875,7 +875,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 
 		$result = array();
 
-		/** @var tx_seminars_speaker $speaker */
+		/** @var Tx_Seminars_OldModel_Speaker $speaker */
 		foreach ($this->getSpeakerBag($speakerRelation) as $speaker) {
 			$result[] = $speaker->getLinkedTitle($plugin);
 		}
@@ -1029,13 +1029,13 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 			$result .= '_single';
 		}
 
-		/** @var tx_seminars_speaker $speaker */
+		/** @var Tx_Seminars_OldModel_Speaker $speaker */
 		foreach ($speakers as $speaker) {
 			switch ($speaker->getGender()) {
-				case tx_seminars_speaker::GENDER_MALE:
+				case Tx_Seminars_OldModel_Speaker::GENDER_MALE:
 					$hasMaleSpeakers = TRUE;
 					break;
-				case tx_seminars_speaker::GENDER_FEMALE:
+				case Tx_Seminars_OldModel_Speaker::GENDER_FEMALE:
 					$hasFemaleSpeakers = TRUE;
 					break;
 				default:
@@ -4477,7 +4477,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 		$deadline = $beginDate;
 		$speakers = $this->getSpeakerBag();
 
-		/** @var tx_seminars_speaker $organizer */
+		/** @var Tx_Seminars_OldModel_Speaker $organizer */
 		foreach ($speakers as $speaker) {
 			$speakerDeadline = $beginDate -
 				($speaker->getCancelationPeriodInDays()
