@@ -104,6 +104,7 @@ return array(
 	'tx_seminars_oldmodel_abstracttimespan' => $extensionPath . 'Classes/OldModel/AbstractTimeSpan.php',
 	'tx_seminars_oldmodel_category' => $extensionPath . 'Classes/OldModel/Category.php',
 	'tx_seminars_oldmodel_organizer' => $extensionPath . 'Classes/OldModel/Organizer.php',
+	'tx_seminars_oldmodel_speaker' => $extensionPath . 'Classes/OldModel/Speaker.php',
 	'tx_seminars_oldmodel_timeslot' => $extensionPath . 'Classes/OldModel/TimeSlot.php',
 	'tx_seminars_pi2' => $extensionPath . 'Classes/pi2/class.tx_seminars_pi2.php',
 	'tx_seminars_pi2_pi2test' => $extensionPath . 'Tests/Unit/pi2/pi2Test.php',
@@ -113,7 +114,6 @@ return array(
 	'tx_seminars_service_singleviewlinkbuilder' => $extensionPath . 'Classes/Service/SingleViewLinkBuilder.php',
 	'tx_seminars_seminar' => $extensionPath . 'Classes/class.tx_seminars_seminar.php',
 	'tx_seminars_seminarchild' => $extensionPath . 'Tests/Unit/fixtures/class.tx_seminars_seminarchild.php',
-	'tx_seminars_speaker' => $extensionPath . 'Classes/class.tx_seminars_speaker.php',
 	'tx_seminars_tests_fixtures_testingtimespan' => $extensionPath . 'Tests/Unit/fixtures/class.tx_seminars_tests_fixtures_TestingTimeSpan.php',
 	'tx_seminars_tests_fixtures_bagbuilder_brokentesting' => $extensionPath . 'Tests/Unit/fixtures/BagBuilder/BrokenTesting.php',
 	'tx_seminars_tests_fixtures_bagbuilder_testing' => $extensionPath . 'Tests/Unit/fixtures/BagBuilder/Testing.php',
